added place holders

--- a/Assignment - 1/index.html
+++ b/Assignment - 1/index.html
@@ -100,6 +100,7 @@
             <label for="form-first-name">First Name</label>
             <input
               class="form-input"
+              placeholder="first name"
               type="text"
               name="first name"
               id="form-first-name"
@@ -109,6 +110,7 @@
             <label for="form-last-name">Last Name</label>
             <input
               class="form-input"
+              placeholder="last name"
               type="text"
               name="last name"
               id="form-last-name"
@@ -118,6 +120,7 @@
             <label for="form-email">Email</label>
             <input
               class="form-input"
+              placeholder="email"
               type="email"
               name="email"
               id="form-email"
@@ -127,6 +130,7 @@
             <label for="form-contact-number">Contact Number</label>
             <input
               class="form-input"
+              placeholder="contact number"
               type="tel"
               name="first name"
               id="form-contact-number"
@@ -136,6 +140,7 @@
             <label for="form-address">Address</label>
             <textarea
               class="form-input"
+              placeholder="address"
               name="address"
               id="form-address"
             ></textarea>
