--- a/Assignment - 1/index.html
+++ b/Assignment - 1/index.html
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="service-card">
-          <img class="service-img" src="./assets/jumbotron-img.jpg" alt="" />
+          <img class="service-img" src="./assets/chad-montano.jpg" alt="" />
           <div class="details">
             <h3 class="service-heading">Food at Havana</h3>
             <p class="service-description">
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="service-card">
-          <img class="service-img" src="./assets/jumbotron-img.jpg" alt="" />
+          <img class="service-img" src="./assets/alan-caishan.jpg" alt="" />
           <div class="details">
             <h3 class="service-heading">Havana Spa</h3>
             <p class="service-description">
